Fix: usar header dinámico en comprar.html

--- a/public/Chat.html
+++ b/public/Chat.html
@@ -86,6 +86,11 @@
 </head>
 <body>
 
+<div id="main-header"></div>
+<script src="/js/header.js" defer></script>
+
+
+
 <!-- HEADER DINÁMICO -->
 <div id="main-header"></div>
 
