--- a/public/alquiler.html
+++ b/public/alquiler.html
@@ -228,5 +228,33 @@ function aplicarFiltros() {
 cargarPropiedades();
 </script>
 
+<!-- MENÚ MÓVIL TIPO APP -->
+<nav class="mobile-nav" id="mobileNav">
+  <a href="/index.html" class="active">
+    <span>🏠</span>
+    <small>Inicio</small>
+  </a>
+
+  <a href="/comprar.html">
+    <span>🔍</span>
+    <small>Buscar</small>
+  </a>
+
+  <a href="/favoritos.html">
+    <span>❤️</span>
+    <small>Favoritos</small>
+  </a>
+
+  <a href="/perfil.html#chats">
+    <span>💬</span>
+    <small>Chats</small>
+  </a>
+
+  <a href="/perfil.html">
+    <span>👤</span>
+    <small>Perfil</small>
+  </a>
+</nav>
+
 </body>
 </html>
