--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <title>Costa Hogar - Inicio</title>
   <!-- Importante: ruta correcta al CSS -->
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/header.js"></script>
+
 </head>
 
 <body>
