--- a/public/perfil.html
+++ b/public/perfil.html
@@ -8,17 +8,10 @@
   <!-- FUENTES -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- CSS GLOBAL (OBLIGATORIO) -->
+  <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="/css/styles.css">
 
-  <!-- CSS SOLO DEL PERFIL -->
   <style>
-    body {
-      margin: 0;
-      font-family: "Inter", sans-serif;
-      background: #f5f5f5;
-    }
-
     .contenedor {
       max-width: 1100px;
       margin: 35px auto;
@@ -33,6 +26,7 @@
       gap: 25px;
       margin-bottom: 35px;
       box-shadow: 0 4px 15px rgba(0,0,0,.1);
+      align-items: center;
     }
 
     .avatar {
@@ -102,6 +96,13 @@
       text-align: center;
       margin-top: 15px;
     }
+
+    @media (max-width: 768px) {
+      .perfil-box {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 
@@ -111,10 +112,8 @@
 <div id="main-header"></div>
 <script src="/js/header.js" defer></script>
 
-
 <div class="contenedor">
 
-  <!-- PERFIL -->
   <div class="perfil-box">
     <div class="avatar" id="avatar">U</div>
     <div>
@@ -123,25 +122,16 @@
     </div>
   </div>
 
-  <!-- PROPIEDADES -->
   <h2 class="titulo-seccion">Mis propiedades publicadas</h2>
   <div id="listaPropiedades" class="lista"></div>
-  <p id="noProps" class="muted" style="display:none;">
-    No has publicado propiedades
-  </p>
+  <p id="noProps" class="muted" style="display:none;">No has publicado propiedades</p>
 
-  <!-- CHATS -->
-  <h2 class="titulo-seccion">Mis conversaciones</h2>
+  <h2 class="titulo-seccion" id="chats">Mis conversaciones</h2>
   <div id="listaChats"></div>
-  <p id="noChats" class="muted" style="display:none;">
-    No tienes conversaciones
-  </p>
+  <p id="noChats" class="muted" style="display:none;">No tienes conversaciones</p>
 
 </div>
 
-<!-- ======================
-     JS PERFIL
-====================== -->
 <script>
 const usuario = JSON.parse(localStorage.getItem("usuario") || "null");
 const token = localStorage.getItem("token");
@@ -152,15 +142,15 @@ if (!usuario || !usuario._id || !token) {
 
 document.getElementById("nombreUsuario").textContent = usuario.nombre;
 document.getElementById("emailUsuario").textContent = usuario.email;
-document.getElementById("avatar").textContent =
-  usuario.nombre.charAt(0).toUpperCase();
+document.getElementById("avatar").textContent = usuario.nombre.charAt(0).toUpperCase();
 
 async function cargarPropiedades() {
   const res = await fetch("/propiedades");
   const data = await res.json();
-  const mias = data.filter(p => String(p.usuarioId) === usuario._id);
 
+  const mias = data.filter(p => String(p.usuarioId) === String(usuario._id));
   const cont = document.getElementById("listaPropiedades");
+
   cont.innerHTML = "";
 
   if (!mias.length) {
@@ -195,8 +185,7 @@ async function cargarChats() {
 
   chats.forEach(c => {
     cont.innerHTML += `
-      <div class="chat-item"
-        onclick="location.href='/chat.html?id=${c._id}'">
+      <div class="chat-item" onclick="location.href='/chat.html?id=${c._id}'">
         <strong>Chat</strong><br>
         <small>${c.propiedadTitulo || "Propiedad"}</small>
       </div>
@@ -208,11 +197,9 @@ cargarPropiedades();
 cargarChats();
 </script>
 
-<!-- HEADER JS (UNA SOLA VEZ) -->
-
-<!-- MENÚ MÓVIL TIPO APP -->
-<nav class="mobile-nav" id="mobileNav">
-  <a href="/index.html" class="active">
+<!-- MENÚ MÓVIL -->
+<nav class="mobile-nav">
+  <a href="/index.html">
     <span>🏠</span>
     <small>Inicio</small>
   </a>
@@ -222,17 +209,12 @@ cargarChats();
     <small>Buscar</small>
   </a>
 
-  <a href="/favoritos.html">
-    <span>❤️</span>
-    <small>Favoritos</small>
-  </a>
-
   <a href="/perfil.html#chats">
     <span>💬</span>
     <small>Chats</small>
   </a>
 
-  <a href="/perfil.html">
+  <a href="/perfil.html" class="active">
     <span>👤</span>
     <small>Perfil</small>
   </a>
