Final frontend fixes and stable deploy

--- a/public/alquiler.html
+++ b/public/alquiler.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- CSS GLOBAL -->
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="js/header.js"></script>
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- CSS SOLO DE ALQUILER (idéntico a comprar) -->
   <style>
@@ -123,7 +122,7 @@
 
 <body>
 
-<!-- HEADER DINÁMICO (ÚNICO) -->
+<!-- HEADER DINÁMICO -->
 <div id="main-header"></div>
 <script src="/js/header.js" defer></script>
 
@@ -172,7 +171,7 @@
     <span>🏠</span>
     <small>Inicio</small>
   </a>
-  <a href="/comprar.html">
+  <a href="/alquiler.html" class="active">
     <span>🔍</span>
     <small>Buscar</small>
   </a>
