Añadido campo habitaciones al modelo

--- a/public/comprar.html
+++ b/public/comprar.html
@@ -152,7 +152,8 @@
       <option value="4">4+</option>
     </select>
 
-    <button onclick="aplicarFiltros()">Aplicar filtros</button>
+    <button onclick="cargarPropiedades()">Aplicar filtros</button>
+
   </aside>
 
   <section>
